# yishan-mono

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  README.md  README.zh-CN.md  biome.json  install.sh  install.test.ts  package.json  tsconfig.json
.agents/commands/: create-github-issue.md  create-pr.md  review-code.md
.agents/skills/: code-review.md  create-github-issue.md  pr-skill.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: work-item.md
.github/workflows/: claude-pr-review.yml  cli-goreleaser.yml  deploy-api-service.yml  pr-tests.yml  pr-unit-tests.yml  release-package.yml  release-pi-ask.yml  release-pi-memory.yml  release-pi-notify.yml  release-pi-workspace.yml  release.yml
.tmp/: codex-test-server.command
apps/api-service/: .dev.vars.example  .env.example  README.md  drizzle.config.ts  package.json  tsconfig.json  vitest.config.ts  wrangler.toml
apps/cli/: .goreleaser.yaml  Makefile  README.md  go.mod  go.sum  main.go
apps/cli-rs/: Cargo.toml  Makefile  build.rs
apps/cli-rs/src/: buildinfo.rs  error.rs  main.rs
apps/cli-rs/src/api/: client.rs  methods.rs  mod.rs  types.rs
apps/cli-rs/src/cmd/: auth.rs  daemon.rs  job.rs  login.rs  logout.rs  mod.rs  node.rs  org.rs  project.rs  self_update.rs  system.rs  terminal.rs  version.rs  workspace.rs
apps/cli-rs/src/config/: mod.rs  store.rs  types.rs
apps/cli-rs/src/daemon/: cli_detector.rs  client.rs  constants.rs  event_hub.rs  id.rs  mod.rs  pr_tracker.rs  process.rs  server.rs  state.rs  token_usage.rs
apps/cli-rs/src/daemon/rpc/: types.rs
apps/cli-rs/src/login/: mod.rs
apps/cli-rs/src/output/: format.rs  mod.rs  print.rs  table.rs
apps/cli-rs/src/relay/: mod.rs
apps/cli-rs/src/runtime/: mod.rs
apps/cli-rs/src/watcher/: git_ignore_filter.rs  mod.rs
apps/cli-rs/src/workspace/: context.rs  dispatch.rs  file_cache.rs  file_search.rs  file_service.rs  git_service.rs  manager.rs  mod.rs  types.rs  workspace_handle.rs
apps/cli-rs/src/workspace/terminal/: mod.rs  ports_unix.rs
apps/desktop/: README.md  entitlements.mac.plist  package.json  tsconfig.json  vite.config.ts
apps/landing/: package.json
apps/mobile/: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  README.md  app.config.test.ts  app.json  (+5 more)
docs/: agent-automation.md  coding-guide.md  computer-use-macos-packaging.md  computer-use-macos-verification.md
scripts/: materialIconTheme.test.ts
(+2003 files in other folders)
